Refactor records to public visibility and clean up unused comments in generation classes